@@ -1,6 +1,7 @@
 ===== 2.0.0+dev =====
 
   * Rename {{{Lwt.select}}} to {{{Lwt.pick}}}
+  * Adding module {{{Lwt_condition}}}
   * More react helpers:
     ** {{{Lwt_event.next}}}
     ** {{{Lwt_event.limit}}} and {{{Lwt_signal.limit}}}
